--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "@tailwindcss/postcss": "^4.1.4",
+    "gsap": "^3.13.0",
     "next": "15.3.1",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
