--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@gsap/react": "^2.1.2",
     "@tailwindcss/postcss": "^4.1.4",
+    "d3": "^7.9.0",
     "gsap": "^3.13.0",
+    "lucide-react": "^0.506.0",
     "next": "15.3.1",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
@@ -20,6 +22,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/d3": "^7.4.3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
