--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@gsap/react": "^2.1.2",
     "@tailwindcss/postcss": "^4.1.4",
     "d3": "^7.9.0",
+    "framer-motion": "^12.9.4",
     "gsap": "^3.13.0",
     "lucide-react": "^0.506.0",
     "next": "15.3.1",
